# sf-report-fetcher

./: .gitignore  README.md  pyproject.toml  setup.py
salesforce_report_fetcher/: fetcher.py  version.py
scripts/: bump_version.py
