[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "requests>=2.25.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "salesforce_report_fetcher.VERSION"}

[project]
name = "sf-report-fetcher"
dynamic = ["version"]
description = "A Python utility to fetch complete Salesforce reports, bypassing the 2000-row limit. Supports custom API versions."
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
keywords = ["salesforce", "report", "api", "pagination", "salesforce-api"]
dependencies = [
    "requests >= 2.25.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/sf-report-fetcher"
Documentation = "https://github.com/yourusername/sf-report-fetcher#readme"
Repository = "https://github.com/yourusername/sf-report-fetcher.git"
Issues = "https://github.com/yourusername/sf-report-fetcher/issues"